# wikitree-intelligence

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODOS.md  docker-compose.yml  eng-review-test-plan.md  implementation-plan.md  office-hours-design.md  pr4-plan.md  pr6-import-job-plan.md  pyrefly.toml  ruff.toml  schema.md
.agents/skills/markdown/: LICENSE  README.md  SKILL.md
.agents/skills/python-expert/: AGENTS.md  SKILL.md
.github/: dependabot.yml
.github/workflows/: api-docker-build.yml  api-lint.yml  api-test.yml  ci-ui.yml  ui-docker-build.yml  worker-docker-build.yml  worker-lint.yml  worker-test.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pyrefly.toml
apps/api/src/api/: app.py  database.py  enums.py  logging.py  settings.py  state_machines.py
apps/api/src/api/models/: health.py  user.py
apps/api/src/api/routes/: auth.py  health.py  import_jobs.py  user.py  wikitree.py
apps/api/src/api/security/: google_bearer_token.py  security.py  session_auth.py
apps/api/src/api/services/: __init__.py  import_pipeline.py
apps/api/src/api/wikitree/: __init__.py  client.py  session.py
apps/api/tests/: conftest.py  test_google_bearer_token.py  test_health.py  test_import_job_states.py  test_import_jobs_routes.py  test_review_record_states.py  test_wikitree_client.py  test_wikitree_routes.py  test_wikitree_session.py
apps/api/tests/routers/: test_auth.py  test_user.py
apps/api/tests/wikitree/: __init__.py  conftest.py  test_client.py  test_routes.py  test_session.py
apps/ui/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
apps/ui/src/: App.css  App.tsx  index.css  main.tsx
apps/ui/tests/: App.test.tsx  GoogleSignInButton.test.tsx  LoggedInScreen.test.tsx  WikiTreeSettingsPage.test.tsx  (+2 more)
apps/worker/: .gitignore  Dockerfile  README.md  coverage.xml  entrypoint.sh  pyproject.toml
(+20 files in other folders)
