[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.0.0"
description = "API for wikitree intelligence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "async-lru==2.3.0",
    "cachecontrol==0.14.4",
    "fastapi==0.135.2",
    "google-auth==2.48.0",
    "gunicorn==25.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "itsdangerous==2.2.0",
    "sqlalchemy[asyncio]==2.0.48",
    "sqlmodel==0.0.37",
    "uvicorn==0.41.0",
]
authors = [
    {name = "Stuart Langley", email = "stuart@langleyclan.com"},
]
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "aiosqlite==0.21.0",
    "asgi-lifespan==2.1.0",
    "httpx>=0.28.1,<1.0.0",
    "pyrefly==0.59.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.5.0",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "python-jose==3.5.0",
    "ruff==0.15.8",
]


[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=api --cov-report=term-missing --cov-report=xml --cov-fail-under=80 --show-capture=all"
testpaths = ["tests"]
timeout = 15
timeout_method = "thread"
log_level = "INFO"


[tool.pytest_env]
DATABASE_URL = 'sqlite+aiosqlite:///:memory:'
GOOGLE_OAUTH_CLIENT_ID = 'not-a-real-client-id'
SESSION_SECRET_KEY = 'not-a-real-secret-key'
ENVIRONMENT = 'development'

[tool.coverage.run]
source = ["api"]
omit = ["tests/*", "*/venv/*", "*/__pycache__/*"]
